manifest/objects/Apttus_Base2__TelemetryLog__c.object
<CustomObject>
    <description>Object used to capture and determine the root cause of an issue or event for analytics.</description>
    <fields>
        <fullName>Apttus_Base2__Attributes__c</fullName>
        <description>Long text area field used for capturing extra transaction data (in JSON format or similar) that was not captured in other fields.</description>
        <inlineHelpText>Long text area field used for capturing extra transaction data (in JSON format or similar) that was not captured in other fields.</inlineHelpText>
        <label>Attributes (Extra Operation Data)</label>
        <length>64000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Body__c</fullName>
        <description>Body of the exception being logged, such as a stack trace or the like.</description>
        <inlineHelpText>Body of the exception being logged, such as a stack trace or the like.</inlineHelpText>
        <label>Log Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__IsSynced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether this record has been synchronized with the external system or not. If so, data will be deleted in the next scheduled batch job run.</description>
        <inlineHelpText>Determines whether this record has been synchronized with the external system or not. If so, data will be deleted in the next scheduled batch job run.</inlineHelpText>
        <label>Is Record Synced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__OperationName__c</fullName>
        <description>Name of operation or event to log.</description>
        <inlineHelpText>Name of operation or event to log.</inlineHelpText>
        <label>Operation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__OrgId__c</fullName>
        <description>Salesforce organization id.</description>
        <inlineHelpText>Salesforce organization id.</inlineHelpText>
        <label>Org Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__PackageName__c</fullName>
        <description>Name of the product or package where this operation occurred.</description>
        <inlineHelpText>Name of the package, resource, or product where this operation occurred.</inlineHelpText>
        <label>Package or Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__PackageVersion__c</fullName>
        <description>Version of the package where this operation occurred.</description>
        <inlineHelpText>Version of the package where this operation occurred.</inlineHelpText>
        <label>Package Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Severity__c</fullName>
        <description>Level of severity of the exception or error being logged.</description>
        <inlineHelpText>Level of severity of the exception or error being logged.</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Timestamp__c</fullName>
        <description>Timestamp from when the operation occurred.</description>
        <inlineHelpText>Timestamp from when the operation occurred.</inlineHelpText>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Telemetry Log</label>
    <nameField>
        <displayFormat>TL-{00000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telemetry Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>